css/home_page.css
body {
  height: 100%;
  width: 100vw;
  margin: 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: var(--dynamic_background);
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#idle_overlay {
  width: 100%;
  height: 100%;
  position: fixed;
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: none;
  backdrop-filter: blur(10px);
  transition: opacity 250ms linear;
  cursor: pointer;
  z-index: 99;
  text-align: center;
}
#idle_overlay * {
  color: black;
}
#idle_overlay container {
  height: auto;
  margin: auto;
  width: 100%;
}
#idle_overlay h1 {
  font-family: 'ubuntu', "Montserrat";
  font-weight: 550;
  font-size: 200px;
  line-height: 200px;
  margin-bottom: 20px;
}
#idle_overlay h3 {
  font-size: 74px;
  font-weight: 500;
  line-height: 74px;
  margin-bottom: 20px;
}
#idle_overlay h4 {
  font-weight: 550;
  font-size: 60px;
  line-height: 60px;
  margin: auto auto 120px auto;
  animation: idle_pulse 5s infinite;
}

@keyframes idle_pulse {
  0% {
		transform: scale(0.95);
	}

	50% {
		transform: scale(1);
	}

	100% {
		transform: scale(0.95);
	}
}

#login_box {
  width: 50%;
  min-width: 740px;
  max-width: 900px;
  height: 50%;
  max-height: 400px;
  min-height: 400px;
  position: fixed;
  top: 30%;
  border-radius: 60px;
  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
  display: block;
  background-color: rgba(0, 0, 0, .30);
  backdrop-filter: blur(5px);
  transform: scale(1.0);
  transition: transform 200ms;
}
#login_box header h2 {
  font-size: 32px;
  letter-spacing: 4px;
  color: var(--white);
}
#login_box header {
  width: 100%;
  min-height: 88px;
  background-color: rgba(0, 0, 0, 0.60);
  grid-area: 1 / 1 / 1 / 4;
  border-radius: 60px 60px 0px 0px;
  display: flex;
  align-items: center;
  justify-content: center;
}
#login_box .login_preset {
  display: none;
  flex-direction: column;
  height: 100%;
}
#login_box #user_selection_preset {
  display: flex;
}
#back_button {
  display: none;
}

.login_preset form {
  height: 100%;
  width: 100%;
  background: var(--white);
  border-radius: 0px 0px 60px 60px;

  display: flex;
  flex-direction: column;
}
.login_preset form container {
  display: grid;
  grid-template-columns: 160px 1fr;
  grid-template-rows: 1fr;
  grid-auto-flow: column;
  margin: 20px 7%;
  width: 86%;
  min-height: none;
  height: auto;
}
.login_preset form container:first-of-type {
  margin-top: 40px;
}
.login_preset form label {
  width: auto;
  height: 50px;
  margin: 0px auto 0px 0px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
}
.login_preset form a {
  text-align: center;
  margin: auto auto 20px auto;
  cursor: pointer;
}
.login_preset form a:hover {
  color: var(--blue);
}
.login_preset input, select {
  height: 50px;
  width: 100%;
  margin: 0px auto auto 0px;
  background: var(--light-grey);
  border: none;
  border-radius: 8px;
  box-sizing:border-box;
}
.login_preset input, option, #locations_search_box, .suggested_inputs li {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 29px;
}
.login_preset .suggested_inputs li {
  padding: 0px 8px;
  width: calc(100% - 8px);
}

.login_preset form button:last-of-type {
  margin: auto;
  grid-column: 2;
  width: 100%;
  background: var(--navy);
  cursor: pointer;
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
  margin-left: 20%;
  position: relative;
  border-radius: 8px;
  height: 50px;
  margin: 0;
}
.login_preset #user_self_sign_in_form button:last-of-type {
  grid-row: 2 / -1;
}
.login_preset input[type="password"] {
  font:small-caption;font-size:32px
}

#staff_login_form input[type='text'], input[type='password'] {
  text-transform: none;
}
#staff_login_form input[type='password'] {
  font: small-caption;
  font-size: 24px;
}

#user_selection_grid {
  display: flex;
  height: 100%;
  width: 100%;
}
#user_selection_grid container {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#user_selection_grid .sign_in_out_button {
  width: 90%;
  height: 80%;
  border-radius: 30px;
  border: none;
  font-family: "Montserrat";
  cursor: pointer;
  box-shadow: 0px 3px 15px rgb(0 0 0 / 20%);
  transition: 200ms;
  background-position: center;
  background: var(--white);
  transition: background 1000ms;
}

.search_wrapper {
  height: 50px;
  width: 100%;
  display: block;
  margin: auto auto 0px 0px;
  z-index: 2;
  transition: opacity 100ms linear;
}
.search_wrapper:first-of-type {
  z-index: 3;
}
.search_wrapper ul {
  width: 100%;
  height: auto;
  max-height: 153px;
  background: rgb(158,194,230);
  margin: 0px;
  padding: 0;
  overflow: hidden;
  background: #CBCBCB;
  border: none;
  border-radius: 8px;
}
.search_wrapper li {
  width: 100%;
  height: 50px;
  text-align: left;
  cursor: pointer;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  border-top: 1px solid black;
}
.search_wrapper input:focus ~ .suggested_inputs {
  opacity: 1.0;
}
.search_wrapper input:not(:focus) ~ .suggested_inputs {
  opacity: 0.0;
}
.search_wrapper li:hover {
  background: #D9D9D9;
}
.search_wrapper li h3 {
  height: auto;
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 29px;
  display: inline-block;
  margin: auto 0px auto 8px;
  padding: 0px;
}

.staff_note {
  margin: auto;
  grid-column: 2;
  width: 100%;
  background: none;
  cursor: pointer;
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
  position: relative;
  margin: 0;
  text-align: center;
}

#notification_wrapper {
  width: 100%;
  height: 0px;
  max-height: 120px;
  z-index: 1;
  border: none;
  margin: 0px;
  padding: 0px;
  background-repeat: no-repeat;
  background-position: 10px center;
  overflow: hidden;

  display: block;
  transition: height 500ms;
}
#notification_wrapper .message {
  height: calc(100% - 16px);
  width: 100%;
  padding: 8px 16px 8px 16px;
  display: flex;
  justify-content: center;
  align-items: center;
}
@media screen and (max-width: 1400px), (max-height: 800px) {
  #main_header {
    min-height: 80px;
  }
  #main_header img {
    width: 65px;
    height: 60px;
    margin: 10px 0px 10px 10px;
  }
  #main_header h5 {
    font-size: 16px;
  }
  #main_header h1 {
    font-size: 20px;;
  }
  #main_header .blue_button {
    height: 32px;
    border-radius: 12px;
  }
  navbar {
    padding: 0px 20px 0px 0px;
  }
  #login_box {
    top: 20%;
  }
}

